--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "stylelint-config-idiomatic-order": "10.0.0",
     "stylelint-config-standard-scss": "13.1.0",
     "stylelint-use-logical-spec": "5.0.1",
+    "terser": "^5.36.0",
     "type-fest": "^4.15.0",
     "typescript": "^5.0.4",
     "unplugin-auto-import": "^0.17.5",
