--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apexcharts-clevision": "^3.28.5",
     "axios": "1.6.8",
     "colorthief": "^2.4.0",
+    "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "express-http-proxy": "^2.0.0",
