更新依赖版本，优化日志处理逻辑，添加日志解析功能

--- a/package.json
+++ b/package.json
@@ -19,36 +19,36 @@
     ]
   },
   "dependencies": {
-    "@fullcalendar/core": "^6.1.8",
-    "@fullcalendar/daygrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.7",
-    "@fullcalendar/list": "^6.1.7",
-    "@fullcalendar/timegrid": "^6.1.7",
-    "@fullcalendar/vue3": "^6.1.8",
-    "@iconify/utils": "^2.1.22",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/list": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
+    "@iconify/utils": "^2.2.1",
     "@vue-js-cron/vuetify": "^5.0.9",
-    "@vueuse/core": "^10.1.2",
-    "@vueuse/math": "^10.1.2",
-    "ace-builds": "^1.32.6",
+    "@vueuse/core": "^12.4.0",
+    "@vueuse/math": "^12.4.0",
+    "ace-builds": "^1.37.4",
     "apexcharts-clevision": "^3.28.5",
-    "axios": "1.6.8",
-    "colorthief": "^2.4.0",
+    "axios": "^1.7.9",
+    "colorthief": "^2.6.0",
     "copy-to-clipboard": "^3.3.3",
-    "dayjs": "^1.11.10",
-    "express": "^4.18.2",
-    "express-http-proxy": "^2.0.0",
+    "dayjs": "^1.11.13",
+    "express": "^4.21.2",
+    "express-http-proxy": "^2.1.1",
     "lodash": "^4.17.21",
     "mousetrap": "^1.6.5",
     "nprogress": "^0.2.0",
-    "qrcode.vue": "^3.4.1",
-    "sass": "^1.59.3",
-    "tailwindcss": "^3.3.2",
-    "unplugin-vue-define-options": "^1.3.5",
-    "vue": "^3.3.2",
-    "vue-router": "^4.2.0",
-    "vue-toast-notification": "^3",
+    "qrcode.vue": "^3.6.0",
+    "sass": "^1.83.4",
+    "tailwindcss": "^ 3.4.17",
+    "unplugin-vue-define-options": "^1.5.3",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3",
     "vue3-ace-editor": "^2.2.4",
-    "vue3-apexcharts": "^1.4.1",
+    "vue3-apexcharts": "^1.8.0",
     "vue3-perfect-scrollbar": "^2.0.0",
     "vuedraggable": "^4.1.0",
     "vuetify": "3.7.3",
