--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@vueuse/core": "^12.4.0",
     "@vueuse/math": "^12.4.0",
     "ace-builds": "^1.37.4",
-    "apexcharts-clevision": "^3.28.5",
+    "apexcharts": "^4.0.0",
     "axios": "^1.7.9",
     "colorthief": "^2.6.0",
     "copy-to-clipboard": "^3.3.3",
@@ -43,7 +43,6 @@
     "qrcode.vue": "^3.6.0",
     "sass": "^1.83.4",
     "tailwindcss": "^ 3.4.17",
-    "unplugin-vue-define-options": "^1.5.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-toast-notification": "^3.1.3",
@@ -58,50 +57,48 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@antfu/eslint-config-vue": "^0.43.1",
     "@iconify-json/mdi": "^1.1.52",
     "@iconify/tools": "^4.0.4",
-    "@iconify/vue": "4.1.1",
-    "@intlify/unplugin-vue-i18n": "^4.0.0",
+    "@iconify/vue": "^4.3.0",
+    "@intlify/unplugin-vue-i18n": "^6.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.1.4",
     "@types/webfontloader": "^1.6.34",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "@vitejs/plugin-vue": "^5.0.4",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "@vitejs/plugin-vue-jsx": "^4.1.1",
     "autoprefixer": "^10.4.14",
-    "eslint": "^9.0.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint": "^9.18.0",
     "eslint-import-resolver-typescript": "^3.5.1",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-regex": "^1.10.0",
-    "eslint-plugin-sonarjs": "^0.25.1",
-    "eslint-plugin-unicorn": "^52.0.0",
+    "eslint-plugin-sonarjs": "^3.0.1",
+    "eslint-plugin-unicorn": "^56.0.1",
     "eslint-plugin-vue": "^9.12.0",
-    "postcss": "8",
+    "postcss": "^8.5.1",
     "postcss-html": "^1.5.0",
-    "stylelint": "16.3.1",
-    "stylelint-config-idiomatic-order": "10.0.0",
-    "stylelint-config-standard-scss": "13.1.0",
+    "stylelint": "^16.13.2",
+    "stylelint-config-idiomatic-order": "^10.0.0",
+    "stylelint-config-standard-scss": "^14.0.0",
     "stylelint-use-logical-spec": "5.0.1",
     "terser": "^5.36.0",
     "type-fest": "^4.15.0",
     "typescript": "^5.0.4",
-    "unplugin-auto-import": "^0.17.5",
-    "unplugin-vue-components": "^0.26.0",
-    "vite": "^5.2.8",
+    "unplugin-auto-import": "^19.0.0",
+    "unplugin-vue-components": "^28.0.0",
+    "unplugin-vue-define-options": "^1.5.3",
+    "vite": "^5.4.11",
     "vite-plugin-pages": "^0.32.1",
-    "vite-plugin-pwa": "^0.20.0",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "2.0.4",
-    "vue-shepherd": "^3.0.0",
-    "vue-tsc": "^2.0.10"
+    "vue-shepherd": "^4.1.0",
+    "vue-tsc": "^2.0.10",
+    "workbox-build": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
-  "packageManager": "yarn@1.22.18",
-  "resolutions": {
-    "postcss": "8"
-  }
+  "packageManager": "yarn@1.22.18"
 }
