--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moviepilot",
-  "version": "2.2.7-2",
+  "version": "2.2.8",
   "private": true,
   "bin": "dist/service.js",
   "scripts": {
