--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@intlify/unplugin-vue-i18n": "^6.0.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/lodash-es": "^4.17.12",
+    "@types/mousetrap": "^1.6.15",
     "@types/node": "^20.1.4",
     "@types/webfontloader": "^1.6.34",
     "@typescript-eslint/eslint-plugin": "^8.20.0",
