--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moviepilot",
-  "version": "2.3.7",
+  "version": "2.3.7-1",
   "private": true,
   "bin": "dist/service.js",
   "scripts": {
