更新国际化支持

--- a/src/@iconify/tsconfig.json
+++ b/src/@iconify/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "CommonJS",
+    "module": "Node16",
     "declaration": false,
     "declarationMap": false,
     "sourceMap": false,
     "composite": false,
     "strict": true,
-    "moduleResolution": "node",
+    "moduleResolution": "node16",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
   },
