--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "moviepilot",
   "version": "2.4.3",
   "private": true,
+  "type": "module",
   "bin": "dist/service.js",
   "scripts": {
     "dev": "vite --host",
