更新国际化支持

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "baseUrl": "./",
     "target": "esnext",
     "useDefineForClassFields": true,
-    "module": "Node16",
-    "moduleResolution": "node16",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "isolatedModules": true,
     "strict": true,
     "jsx": "preserve",
