--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@iconify/tools": "^4.0.4",
     "@iconify/vue": "^4.3.0",
     "@intlify/unplugin-vue-i18n": "^6.0.3",
+    "@originjs/vite-plugin-federation": "^1.4.1",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/lodash-es": "^4.17.12",
     "@types/mousetrap": "^1.6.15",
