--- a/examples/plugin-component/package.json
+++ b/examples/plugin-component/package.json
@@ -9,7 +9,11 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "vue": "^3.3.4"
+        "vue": "^3.3.4",
+        "vuetify": "^3.4.0",
+        "echarts": "^5.4.3",
+        "vue-echarts": "^6.6.1",
+        "@vueuse/core": "^10.6.0"
     },
     "devDependencies": {
         "@originjs/vite-plugin-federation": "^1.3.5",
