--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,9 +44,11 @@ jobs:
 
       - name: Delete Release
         uses: dev-drprasad/delete-tag-and-release@v1.1
+        continue-on-error: true
         with:
           tag_name: ${{ env.frontend_version }}
           delete_release: true
+          delete_tag: true
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate Release
