在 App.vue 中添加登录状态变化的监听，确保登录后重新加载背景图片；同时更新 .vscode/settings.json，增加 i18n-ally.localesPaths 配置。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,5 +106,8 @@
       }
     ]
   },
-  "vue3snippets.enable-compile-vue-file-on-did-save-code": false
+  "vue3snippets.enable-compile-vue-file-on-did-save-code": false,
+  "i18n-ally.localesPaths": [
+    "src/locales"
+  ]
 }
