--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moviepilot",
-  "version": "2.5.3-1",
+  "version": "2.5.4",
   "private": true,
   "type": "module",
   "bin": "dist/service.js",
