--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "tailwindcss": "^ 3.4.17",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-toast-notification": "^3.1.3",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-ace-editor": "^2.2.4",
     "vue3-apexcharts": "^1.8.0",
     "vue3-perfect-scrollbar": "^2.0.0",
