--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "vite": "^5.4.11",
     "vite-plugin-pages": "^0.32.1",
     "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-top-level-await": "^1.5.0",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vite-plugin-vuetify": "2.0.4",
     "vue-shepherd": "^4.1.0",
