--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "ace-builds": "^1.37.4",
     "apexcharts": "^4.0.0",
     "axios": "^1.7.9",
-    "body-scroll-lock": "^4.0.0-beta.0",
+    "body-scroll-lock": "^3.1.5",
     "colorthief": "^2.6.0",
     "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
