--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,11 @@ jobs:
           yarn build
           echo "$frontend_version" > dist/version.txt
           zip -r dist.zip dist
-
+          
+      - name: Generate SHA256
+        run: |
+          sha256sum dist.zip > dist.zip.sha256
+          
       - name: Delete Release
         uses: dev-drprasad/delete-tag-and-release@v1.1
         continue-on-error: true
@@ -62,5 +66,6 @@ jobs:
           make_latest: true
           files: |
             dist.zip
+            dist.zip.sha256
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
